Fix alignment and show time

--- a/src/style.css
+++ b/src/style.css
@@ -16,17 +16,13 @@
 html, body {
     margin: 0px;
     border: 0px;
+    font-family: Passion One;
     padding: 0px;
     height: 100%;
 }
 
 .main {
     height: calc(100%  - 10em);
-}
-
-h2 {
-  color: red;
-  font-family: monospace;
 }
 
 .word-card.team-Neutral {
@@ -55,15 +51,14 @@ h2 {
     display: inline-block;
     border: 1px solid black;
     color: black;
-    margin-left: .5em;
-    margin-right: .5em;
-    margin-top: 0em;
-    margin-bottom: .5em;
     padding: .2em;
-    width: calc(100% * 1/5 - 2em );
-    min-width: 5em;
+    width: calc(100% * 1/5 - 1em );
+    margin-left: 0.25em;
+    margin-right: 0.25em;
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
+    min-width: 4em;
     flex-grow: 1;
-    font-family: Passion One;
     font-size: 2.7em;
     display: flex;
     align-items: center;
@@ -72,11 +67,13 @@ h2 {
 }
 
 .board {
-    padding-left: 2em;
-    padding-right: 2em;
+    margin-left: 4em;
+    margin-right: 3.5em;
     display: flex;
     flex-wrap: wrap;
     height: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
     padding-top: 5em;
     padding-bottom: 5em;
     align-items: stretch;
@@ -87,13 +84,13 @@ h2 {
 }
 
 .reveal-board {
+    cursor: pointer;
     position: fixed;
     top: 0px;
     padding: 0.5em;
-    cursor: pointer;
 }
 
-.next-game {
+.prev-game {
     cursor: pointer;
     position: fixed;
     bottom: 0px;
@@ -101,25 +98,44 @@ h2 {
     padding: 0.5em;
 }
 
-@media (max-width: 800px){
+.next-game {
+    cursor: pointer;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    padding: 0.5em;
+}
+
+.which-game {
+    font-family: monospace;
+    padding-bottom: 0em;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding-top: 1em;
+    text-align: center;
+    padding-right: 2em;
+}
+
+@media (max-width: 1100px){
     .word-card {
         min-height: 1em;
         padding: 0px;
-        margin-top: 0px;
-        margin-bottom: 0px;
         margin: 0px;
-        min-width: 4em;
-        width: calc(100% * 1/5 - 5px);
-        font-size: 1.6em;
+        min-width: 1em;
+        width: calc(100% * 1/5 - .5em);
+        margin-left: 0em;
+        margin-right: 0em;
+        font-size: 1.5em;
         text-align: center;
         line-height: .7em;
         border: 0px;
     }
     .board {
-        padding-top: 1em;
-        padding-bottom: 1em;
-        padding-left: 4em;
-        padding-right: 4em;
+        padding-top: 1.8em;
+        padding-bottom: 0em;
+        padding-left: 1em;
+        padding-right: 1em;
         height: 100%;
     }
     .main {
@@ -132,6 +148,11 @@ h2 {
 @media (max-width: 600px){
     .word-card {
         min-width: 7em;
+        width: 100%;
+    }
+    .board {
+        padding-bottom: 0em;
+        padding-bottom: 0em;
     }
 
 }
